# plastic

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  constants.cuh  constants.h  cuda_state.cuh  cuda_utility.cuh  dataset.h  eigen.cuh  err.cuh  init.h  inits.h  input.cuh  main.cpp  mem.cuh  mutable_state.h  out.txt  randGen.cu  randGen.cuh  robust.cuh  state.h  test.cu  test.h  type.cuh  type.h  utility.cuh
src/: .#dist_example.cpp  constants.h  cuda_state.cuh  dataset.h  dist_example.h  init.h  loader.h  main.cpp  multi_test.cu  multi_test.h  randGen.cuh  state.h  stats.cuh  test.cu  test.h  testing.h
src/kernels/experimental/: kernel.cuh
src/kernels/fast_kernel/: input.cuh  kernel.cuh
src/kernels/robust_kernel/: input.cuh  kernel.cuh
src/kernels/spin_kernel/: kernel.cuh
